--- a/client/src/component/Home/home.css
+++ b/client/src/component/Home/home.css
@@ -17,6 +17,6 @@ right: 10px;
 
     @keyframes linh {
     0% { color: #f8320a; }
-    50% { color: #fff; }
+    50% { color: #0ea734; }
     100% { color: #F8CD0A; }
     }
