--- a/client/src/component/navbar/nav.css
+++ b/client/src/component/navbar/nav.css
@@ -11,3 +11,15 @@
     color: white;
     padding-left: 10px;
 }
+.cart_quantyti{
+   position: relative;
+}
+.cart_quantyti span{
+   position: absolute;
+   top: 0;
+   font-size: 15px;
+   border: 1px solid white;
+   right: -10;
+   padding: 1px 1px;
+   border-radius: 50%;
+}
