--- a/client/src/component/Product/product.css
+++ b/client/src/component/Product/product.css
@@ -18,6 +18,10 @@
 }
 .product_img img{
     width: 100%;
+    -webkit-transition: all 1.5s ease;
+   -moz-transition: all 1.5s ease;
+   -ms-transition: all 1.5s ease;
+   transition: all 1.5s ease;
 }
 .product_img:hover .product_img-img{
     transform: scale(1.2);
