--- a/client/src/component/footer/footer.css
+++ b/client/src/component/footer/footer.css
@@ -1,6 +1,6 @@
 
 .footer{
-   background-color: rgb(29, 22, 22);
+   background-color: #232323;
    color: white;
    margin-top: 50px;
 }
@@ -17,4 +17,19 @@
     list-style: none;
     margin-left: 10px;
     font-size: 30px;
+}
+.footer-heading h4{
+    font-size: 20px;
+    font-weight: 400;
+}
+.footer-heading{
+    padding-top: 20px;
+}
+.footer-ul{
+padding:12px ;
+}
+.footer-ul li{
+    padding: 8px 12px;
+list-style-type: none;
+border-bottom: 0.5px solid #343434;
 }
