--- a/client/src/component/Register/register.css
+++ b/client/src/component/Register/register.css
@@ -65,3 +65,39 @@ margin-top: 15px;
     text-transform: uppercase;
 color: red;
 }
+.header_body {
+    width: 100%;
+    height: 100vh;
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	-webkit-animation: gradient 15s ease infinite;
+	        animation: gradient 15s ease infinite;
+}
+
+@-webkit-keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+.infoform{
+    background-color: white;
+    margin-top: 70px;
+}
