--- a/client/src/component/BrandProduct/brandproduct.css
+++ b/client/src/component/BrandProduct/brandproduct.css
@@ -13,6 +13,8 @@
     background-color: white !important;
 }
 .brandproduct__title{
+
+    margin-top: 130px;
     padding: 8px;
     background-color: #fafafa;
     display: flex;
