--- a/client/src/component/myinfo/myinfo.css
+++ b/client/src/component/myinfo/myinfo.css
@@ -1,5 +1,7 @@
 .myinfo{
     display: flex;
+    margin-bottom: 10px;
+    width: 100%;
     align-items: center;
     justify-content: space-between;
     padding: 8px;
