--- a/client/src/component/offcanvas/offcanvas.css
+++ b/client/src/component/offcanvas/offcanvas.css
@@ -1,3 +1,64 @@
 .offcanvas {
     width: 320px !important;
 }
+.brandproduct__content__left__listproduct__item{
+    position: relative;
+}
+.brandproduct__content__left__listproduct__item__close{
+    position: absolute;
+    top: -6px;
+    right: -10px;
+    font-size: 24px;
+    opacity: 0.3;
+}
+.brandproduct__content__left__listproduct__item__close:hover{
+    opacity: 0.8;
+}
+.brandproduct__content__left__listproduct__item__price{
+    opacity: 0.5;
+}
+.offcanvas__content__totalprice{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 1px solid #ececec;
+    padding-bottom: 10px;
+    margin: 18px 20px 0px 20px;
+}
+.offcanvas__content__totalprice p{
+    font-family:"VNF-Futura Regular", sans-serif !important;
+    margin: 0;
+    margin-right: 4px;
+    font-size: 16px;
+    color: #222222;
+    font-weight: bolder;
+}
+.offcanvas__content__totalprice span{
+    color: #f4516c;
+    font-size: 16px;
+    font-weight: bolder;
+
+}
+.offcanvas__content__btn{
+    margin: 5px 0px;
+    border: none;
+    min-width: 220px;
+    font-weight: bolder;
+    padding: 10px 20px;
+    background-color:black ;
+    color:#fff ;
+    font-size: 16px;
+    font-family:"VNF-Futura Regular", sans-serif !important;
+
+}
+.offcanvas__content__btn:hover{
+    cursor: pointer;
+    opacity: 0.8;
+}
+.offcanvas__content__btn__block{
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
