--- a/client/src/component/Admin/AdminChart/adminchart.css
+++ b/client/src/component/Admin/AdminChart/adminchart.css
@@ -1,4 +1,8 @@
 .adminchart{
-    width: 100px;
-    height: 100px;
+ text-align: center;
+ width: 100%;
+ margin: 0 auto;
+ height: 100%;
+ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+ border-radius: 10px;
 }
