--- a/client/src/component/Evaluate/evaluate..css
+++ b/client/src/component/Evaluate/evaluate..css
@@ -29,3 +29,31 @@ font-size: 20px;
 .evl{
     border-bottom: 1px solid #ccc;
 }
+.modal__body{
+    width: 100%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+.evaluate__star{
+    cursor: pointer;
+    margin: 0px 20px;
+    font-size: 40px;
+}
+.evaluate__star:hover{
+    color: yellow;
+}
+.action__evaluate__star{
+    color: yellow !important;
+}
+.modal__body__evaluate{
+    margin: 16px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.modal__body__evaluate p{
+    font-size: 14px;
+    margin-top: 12px;
+}
