--- a/client/src/component/Admin/Homeadmin/homeadmin.css
+++ b/client/src/component/Admin/Homeadmin/homeadmin.css
@@ -238,5 +238,9 @@ h2 small {
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
+  .radio{
+    margin-right: 10px;
+    margin-top: 20px;
+  }
   
  
