--- a/client/src/component/infoProduct/infoproduct.css
+++ b/client/src/component/infoProduct/infoproduct.css
@@ -173,3 +173,24 @@ margin-bottom: 15px;
   50% { color: greenyellow;  }
   100% { color: #F8CD0A;  } 
 } 
+
+.info__Product{
+  position: relative;
+}
+.Loading__info{
+  z-index: 200;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.4;
+  background-color: #222;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+}
+.Loading__info p{
+  opacity: 1;
+  font-size: 30px;
+  color: white;
+}
