--- a/client/src/component/offcanvas/offcanvas.css
+++ b/client/src/component/offcanvas/offcanvas.css
@@ -62,3 +62,15 @@
     justify-content: center;
     flex-direction: column;
 }
+.offcanvas__content{
+    position: relative;
+}
+.posi{
+    /* background-color: #222222; */
+    position: absolute;
+    top: 50%;
+    left: 40%;
+    /* transform: translate(50%,50%) */
+}
+
+
